k8s/arn-service-4rancher.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-rancher
  namespace: cattle-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP  
    - name: https
      port: 443
      targetPort: 444 
      protocol: TCP 
  type: LoadBalancer
  selector:
    app: rancher
