k8s/arn-ingress-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          resources:
            requests:
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:xxxxxxxxxxxxxxx:certificate/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
spec:
  ingressClassName: alb
  rules:
    - host: nginx.your_domain_name.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-deployment
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.your_domain_name.com
      secretName: tls-secret-name
